Changed projection method: 1) Fall back to check_and_invert_orbital_phase() instead of sort_mobasis(), since we got rid of the idea that the ordering of the orbitals has to be swapped.  Instead we will in any case first check that the sing of the FOs doesn't change between two steps and second project the WF on the FOs if they are degenerated.
2) project_wf_on_new_basis() uses now non-orthogonal orbitals for the projection, which is a good approximation and leads to linear scaling. We use a_old and overlap matrix that is already calculated by check_and_invert_orbital_phase().

Also introduced neighbor-list in gradient calculation between sites.

--- a/rksuite/Makefile
+++ b/rksuite/Makefile
@@ -1,6 +1,6 @@
 #CXX= g++
 #CXX=icpc
-CXXOPTS= -O2 -Wall -pedantic -g
+CXXOPTS= -O2 -Wall -pedantic -g -I../include -I../dftb1
 OBJ= do_rksuite.o rksuite.o
 
 librksuite: $(OBJ)
